testdata/bad/timeToHoursOffset.ion
// Minutes missing
1969-02-23T00+08:00
